opam-version: "2.0"
maintainer: "Jean-Christophe.Filliatre@cnrs.fr"
authors: "Jean-Christophe Filliâtre"
synopsis: "A quick LaTeX preprocessor"
description: "Two main purposes: be a substitute to LaTeX's package listings in order to avoid the use of [fragile] in Beamer slides; insert vertical space that is proportional to the number of empty lines in LaTeX source."
license: "GPL-2.1"
homepage: "https://github.com/backtracking/latexpp"
bug-reports: "https://github.com/backtracking/latexpp/issues"
depends: [
  "ocaml"
  "dune" {>= "2.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/backtracking/latexpp.git"
